--- a/Tacoly.csproj
+++ b/Tacoly.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp6.0</TargetFramework>
-		<StartupObject>Program</StartupObject>
+	<LangVersion>preview</LangVersion>
+	<StartupObject>Tacoly.CLI</StartupObject>
+    <Nullable>enable</Nullable>
+    <RootNamespace>Tacoly</RootNamespace>
   </PropertyGroup>
 
 </Project>
