--- a/Tacoly.csproj
+++ b/Tacoly.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp7.0</TargetFramework>
-            <LangVersion>preview</LangVersion>
-            <StartupObject>Tacoly.CLI</StartupObject>
+        <LangVersion>11.0</LangVersion>
+        <StartupObject>Tacoly.CLI</StartupObject>
         <Nullable>enable</Nullable>
         <RootNamespace>Tacoly</RootNamespace>
     </PropertyGroup>
